--- a/package.json
+++ b/package.json
@@ -4,15 +4,18 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build"
   },
   "dependencies": {
     "@popperjs/core": "^2.11.7",
+    "@vue/cli-service": "^5.0.8",
     "@vuelidate/core": "^2.0.0",
     "@vuelidate/validators": "^2.0.0",
+    "babel": "^6.23.0",
     "chart.js": "^4.2.1",
     "core-js": "^3.8.3",
     "dotenv": "^16.0.3",
